--- a/RealEstateAgency/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/RealEstateAgency/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -10,6 +10,7 @@
     <link href="~/css/jquery-ui.css" rel="stylesheet" type="text/css" />
     <link href="~/jtable/themes/metro/blue/jtable.min.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="~/css/validationEngine.jquery.css" type="text/css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs5/jqc-1.12.4/dt-1.13.1/b-2.3.3/fc-4.2.1/sc-2.0.7/sb-1.4.0/sp-2.1.0/sl-1.5.0/datatables.min.css" />
 
 </head>
 
