--- a/RealEstateAgency/Areas/Admin/Views/Estates/Create.cshtml
+++ b/RealEstateAgency/Areas/Admin/Views/Estates/Create.cshtml
@@ -177,5 +177,6 @@
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap"></script>
     <script async defer src="~/js/mapscript.js" asp-append-version="true"></script>
     <script async defer src="~/js/dragarea.js" asp-append-version="true"></script>
+    <script src="~/js/image-preview.js" asp-append-version="true"></script>
     <script async defer src="~/js/tags.js" asp-append-version="true"></script>
 }
