--- a/RealEstateAgency/wwwroot/css/site.css
+++ b/RealEstateAgency/wwwroot/css/site.css
@@ -561,3 +561,31 @@ ul.checkbox li.focus {
 .lang-menu:hover ul{
     display: block;
 }
+
+.preview_background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.85);
+    z-index: 10000;
+    overflow-y: hidden;
+}
+
+.preview_dialog {
+    position: absolute;
+    top: 10%;
+    left: 10%;
+    width: 80%;
+    height: 80%;
+    text-align: center;
+}
+
+.preview_dialog img {
+    position: relative;
+    top: 50%;
+    transform: perspective(1px) translateY(-50%);
+    max-width: 100%;
+    max-height: 100%;
+}
